Corrected issue with line breaks in labels. Resolves #42

--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -223,6 +223,9 @@
 				padding: 0;
 				margin: 0;
 			}
+			label {
+				white-space: nowrap;
+			}
 
 			&:not(.stacked) { flex-wrap: nowrap; }
 
